--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,32 +1,48 @@
 {
     "version": "2.0.0",
+    "options": {
+        "env": {
+            "PROJECT_NAME": "project_name"
+        }
+    },
+    "windows": {
+        "options": {
+            "env": {
+                "EMULATOR_BINARY": "unreal",
+                "COPY_SNAPSHOT_TO": "C:/TEMP/quicksave.sna"
+            }
+        }
+    },
+    "linux": {
+        "options": {
+            "env": {
+                "EMULATOR_BINARY": "xpeccy",
+                "COPY_SNAPSHOT_TO": "/tmp/quicksave.sna"
+            }
+        }
+    },
+    "type": "shell",
+    "isBackground": false,
+    "presentation": {
+        "echo": false,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+    },
+    "problemMatcher": "$errmatcher-sjasmplus",
     "tasks": [
         {
             "label": "build",
-            "type": "shell",
             "command": "make run",
             "options": {
                 "cwd": "${workspaceFolder}",
-                "env": {
-                    //"PROJECT_NAME": "project_name",
-                    "EMULATOR_BINARY": "unreal",
-                    "COPY_SNAPSHOT_TO": "/tmp/quicksave.sna"
-                }
             },
             "group": {
                 "kind": "build",
                 "isDefault": true
-            },
-            "isBackground": false,
-            "presentation": {
-                "echo": false,
-                "reveal": "always",
-                "focus": true,
-                "panel": "shared",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": "$errmatcher-sjasmplus"
+            }
         }
     ]
 }
